Add maven options.